2009-09-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graphops.tcl: Destroy internal temporary object on internal
	* graphops.man: error. Bumped version to 0.9.2.
	* pkgIndex.tcl:

	* graph/tests/ops/eulerpath.test: Converted to tcltest v2 form.

	* graph/tests/XOpsControl: Added sourcing of the support code
	  needed when the graphops testsuite is run standalone.

2009-07-10  Andreas Kupries  <andreask@activestate.com>

	* graphops.tcl (::struct::graph::op::TarjanSub):
	* graphops.tcl (::struct::graph::op::isCutVertex?):
	* graphops.tcl (::struct::graph::op::Fleury):
	* pkgIndex.tcl: Fixed [Bug 2815302]. Replaced a number of uses of
	* graphops.man: struct::set subtract' with the proper 'struct::set
	  exclude', as these places remove a single element, not a
	  set. Use of the wrong method then breaks the code if elements
	  (node/arc names) with whitespace in them is used. Bumped version
	  to 0.9.1.

2009-06-22  Andreas Kupries  <andreask@activestate.com>

	* tree_tcl.tcl (::struct::tree::_swap): Removed code which flipped
	  the attributes around. This is wrong. They stay with their
	  nodes, per the node name. Thanks to Tom Krehbiel for the report.

	* tree.testsuite : Extended with a test for method swap which
	  checks that the attributes of the nodes are handled correctly.

	* pkgIndex.tcl: Bumped to version 2.1.2.
	* tree.tcl:

2009-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct_tree.man: Fixed typo.

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* graph_tcl.tcl (::struct::graph::_walk): Fixed post-order dfs
	* graph/tests/walk.test: problem [Bug 2420330] in Tcl side.
	* pkgIndex.tcl: Extended testsuite. Bumped to version 2.3.1

2008-11-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
